--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Reserve Fund Interactive Chart</title>
+  <title>Homelessness Fund Interactive Chart</title>
   <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" href="reserves.css">
 </head>
@@ -13,8 +13,7 @@
     <div style="height:20px"></div>
     <div class="row">
       <div class="col-md-10">
-        <p>The Reserve Fund is general unrestricted cash that is set aside for unforeseen expenditures and emergencies. It is made up of two funds: the Emergency Reserve and the Contingency Reserve.</p>
-        <p>Since these funds are carried over from year to year, this data is not represented in the General Fund expenditures. Explore the chart below to see the City’s reserve funds in absolute terms as well as in proportion to the General Fund. For more information, go to <a href="http://cao.lacity.org/budget/">http://cao.lacity.org/budget/</a>.</p>
+        <p>The interactive graph shows year over over monies allocated to homelessness</p>
       </div>
     </div>
     <div style="height:20px"></div>
@@ -23,7 +22,6 @@
         <h5>Ratio of Reserve Fund Balances to Budgeted General Fund Receipts</h5>
         <span class="toolbar_label">Scale by:
         <span id="view_toolbar" class="btn-group" data-toggle="buttons">
-          <label id="percentages" class="btn btn-secondary active"><input type="radio" autocomplete="off">Percentages</label>
           <label id="values" class="btn btn-secondary"><input type="radio" autocomplete="off">Values</label>
         </span></span>
       </div>
