--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="container">
-    <h2>Reserve Fund Balances</h2>
+    <h2>Homelessness Fund Balances</h2>
     <div style="height:20px"></div>
     <div class="row">
       <div class="col-md-10">
