--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div style="height:20px"></div>
     <div class="row">
       <div class="col">
-        <h5>Ratio of Reserve Fund Balances to Budgeted General Fund Receipts</h5>
+        <h5>Homelessness Fund Balances by Fund Type</h5>
         <span class="toolbar_label">Scale by:
         <span id="view_toolbar" class="btn-group" data-toggle="buttons">
           <label id="values" class="btn btn-secondary"><input type="radio" autocomplete="off">Values</label>
