--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="row">
       <div class="col">
         <h5>Homelessness Fund Balances by Fund Type</h5>
-        <span class="toolbar_label">Scale by:
+        <!-- <span class="toolbar_label">Scale by:
         <span id="view_toolbar" class="btn-group" data-toggle="buttons">
           <label id="values" class="btn btn-secondary"><input type="radio" autocomplete="off">Values</label>
-        </span></span>
+        </span></span> -->
       </div>
     </div>
     <div id="vis"></div>
