--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <body>
   <div class="container">
-    <h2>Homelessness Fund Balances</h2>
+    <h2>Homelessness Fund Monies</h2>
     <div style="height:20px"></div>
     <div class="row">
       <div class="col-md-10">
-        <p>The interactive graph shows year over over monies allocated to homelessness</p>
+        <p>The interactive graph shows year over year monies allocated to homelessness</p>
       </div>
     </div>
     <div style="height:20px"></div>
